adding maven scala build plugins